// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Floating Text should render the floating text 1`] = `
.c2 svg {
  width: 2.5em;
  height: 2.5em;
  stroke: #AAAAAA;
}

.c0 {
  -webkit-animation-name: iiAeVx;
  animation-name: iiAeVx;
  -webkit-animation-duration: 3s;
  animation-duration: 3s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

.c1 {
  position: absolute;
  top: 0.6em;
  right: 1.3em;
  width: 20em;
  text-align: right;
  color: #aaaaaa;
  opacity: 1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
}

.c1 > span {
  position: relative;
  top: 4px;
  right: 4px;
}

<div
  class="c0"
  from="-5"
  to="-1"
>
  <div
    class="c1"
  >
    There's more!
    <span
      style="position:relative;top:1.2em;right:0.7em;"
    >
      <span
        class="c2"
        color="#AAAAAA"
      >
        <svg
          fill="#A7A7A7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 100 125"
        >
          <path
            d="M24.4 56.1c15.3-2.1 30.5-5.4 45.2-9.9-.2.2-.4.3-.6.5-2.6 2.1-5.5 3.9-8.6 5.2-.2.1 0 2.4 0 2.7 0 .2.2 2.6 0 2.7 4-1.7 7.7-4.2 10.9-7.2 1.4-1.3 3.4-3.1 4.1-4.9.4-1 .3-2.5.2-3.9.1-1.1.2-2-.1-2.1-5.5-2.2-11-4.1-16.7-5.8.4.1-.5 5.2 0 5.3 3 .9 5.9 1.8 8.8 2.8-14.2 4.2-28.6 7.3-43.3 9.3-.2 0 .2 5.3.1 5.3zm50.9-11.6s0 .1-.1.1c0 0 .1 0 .1-.1z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Floating Text should render with default values 1`] = `
.c2 svg {
  width: 2.5em;
  height: 2.5em;
  stroke: #AAAAAA;
}

.c0 {
  -webkit-animation-name: htUwKc;
  animation-name: htUwKc;
  -webkit-animation-duration: 3s;
  animation-duration: 3s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

.c1 {
  position: absolute;
  top: 0.6em;
  right: 1.3em;
  width: 20em;
  text-align: right;
  color: #aaaaaa;
  opacity: 1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
}

.c1 > span {
  position: relative;
  top: 4px;
  right: 4px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    There's more!
    <span
      style="position:relative;top:1.2em;right:0.7em;"
    >
      <span
        class="c2"
        color="#AAAAAA"
      >
        <svg
          fill="#A7A7A7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 100 125"
        >
          <path
            d="M24.4 56.1c15.3-2.1 30.5-5.4 45.2-9.9-.2.2-.4.3-.6.5-2.6 2.1-5.5 3.9-8.6 5.2-.2.1 0 2.4 0 2.7 0 .2.2 2.6 0 2.7 4-1.7 7.7-4.2 10.9-7.2 1.4-1.3 3.4-3.1 4.1-4.9.4-1 .3-2.5.2-3.9.1-1.1.2-2-.1-2.1-5.5-2.2-11-4.1-16.7-5.8.4.1-.5 5.2 0 5.3 3 .9 5.9 1.8 8.8 2.8-14.2 4.2-28.6 7.3-43.3 9.3-.2 0 .2 5.3.1 5.3zm50.9-11.6s0 .1-.1.1c0 0 .1 0 .1-.1z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
